--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,12 +13,7 @@
         android:theme="@style/Theme.KisanRegistry"
         tools:targetApi="31">
         <activity
-            android:name=".signUp"
-            android:exported="true">
-
-        </activity>
-        <activity
-            android:name=".login"
+            android:name=".SplashScreen"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -27,9 +22,18 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".MainActivity"
+            android:name=".signUp"
             android:exported="true">
+
         </activity>
+        <activity
+            android:name=".login"
+            android:exported="true">
+
+        </activity>
+        <activity
+            android:name=".MainActivity"
+            android:exported="true"></activity>
     </application>
 
 </manifest>
