--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,12 +22,12 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".signUp"
+            android:name=".SignUp"
             android:exported="true">
 
         </activity>
         <activity
-            android:name=".login"
+            android:name=".Login"
             android:exported="true">
 
         </activity>
