--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
-<!--    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />-->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
     <application
         android:allowBackup="true"
@@ -15,7 +16,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.KisanRegistry"
         tools:targetApi="31">
-
+        <activity
+            android:name=".HomeDashboard"
+            android:exported="false" />
+        <activity
+            android:name=".viewmodel.HomeActivity"
+            android:exported="false" />
         <activity
             android:name=".SplashScreen"
             android:exported="true">
@@ -27,10 +33,10 @@
         </activity>
         <activity
             android:name=".signUp"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".login"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".MainActivity"
             android:exported="true" />
