--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,10 +18,9 @@
         tools:targetApi="31">
         <activity
             android:name=".HomeDashboard"
-            android:exported="false" />
-        <activity
-            android:name=".viewmodel.HomeActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:theme="@style/Theme.KisanRegistry"/>
+
         <activity
             android:name=".SplashScreen"
             android:exported="true">
