--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools" >
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
@@ -15,15 +15,22 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.KisanRegistry"
-        tools:targetApi="31">
+        tools:targetApi="31" >
+        <activity
+            android:name=".UserProfile"
+            android:exported="false"
+            android:theme="@style/Theme.KisanRegistry" />
+        <activity
+            android:name=".FarmerSchemes"
+            android:exported="false"
+            android:theme="@style/Theme.KisanRegistry" />
         <activity
             android:name=".HomeDashboard"
             android:exported="false"
-            android:theme="@style/Theme.KisanRegistry"/>
-
+            android:theme="@style/Theme.KisanRegistry" />
         <activity
             android:name=".SplashScreen"
-            android:exported="true">
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
