--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools" >
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
@@ -15,10 +15,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.KisanRegistry"
-        tools:targetApi="31">
-        <activity
-            android:name=".GridUI.ElecricityActivity"
-            android:exported="false" />
+        tools:targetApi="31" >
         <activity
             android:name=".UserProfile"
             android:exported="false"
@@ -33,7 +30,7 @@
             android:theme="@style/Theme.KisanRegistry" />
         <activity
             android:name=".SplashScreen"
-            android:exported="true">
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -49,6 +46,11 @@
         <activity
             android:name=".MainActivity"
             android:exported="true" />
+        <activity android:name=".TermsAndConditionsActivity"
+            android:exported="false"/>
+        <activity android:name=".SoilQualityActivity"
+            android:exported="false"/>
+
     </application>
 
 </manifest>
