Soil Quality page added

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -51,6 +51,9 @@
         <activity android:name=".SoilQualityActivity"
             android:exported="false"/>
 
+        <activity android:name=".GridUI.ElecricityActivity"
+            android:exported="false"/>
+
     </application>
 
 </manifest>
