soil quality updated

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -53,6 +53,8 @@
 
         <activity android:name=".GridUI.ElecricityActivity"
             android:exported="false"/>
+        <activity android:name=".HelpAndSupportActivity"
+            android:exported="false"/>
 
     </application>
 
